--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   font-family: "Outfit", sans-serif;
   font-weight: 600;
+  user-select: none;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
 }
 
 .app {
@@ -25,4 +28,8 @@
   float: left;
   aspect-ratio: 1 / 1;
   border: 1px solid red;
+}
+
+.button {
+  cursor: pointer;
 }
