--- a/src/components/board/board.css
+++ b/src/components/board/board.css
@@ -1,5 +1,5 @@
 .board {
-  border: 1.5px solid rgb(15, 0, 81);
+  border: 2.5px solid #8b8b8b;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
