--- a/src/components/NumberTile/number-tile.css
+++ b/src/components/NumberTile/number-tile.css
@@ -11,10 +11,14 @@
 }
 
 .number-tile.isActive {
-  box-shadow: inset #00ff00 0px 0px 11px 0px, #00ff00 0px 0px 8px 4px;
+  box-shadow: inset #00ff00 0px 0px 11px 0px, #00ff00 0px 0px 1px 4px;
+  font-weight: 600;
 }
 
-.region:nth-of-type(even) .number-tile:nth-of-type(even),
-.region:nth-of-type(odd) .number-tile:nth-of-type(odd) {
-  background-color: blue;
+.region:nth-of-type(even) .number-tile {
+  background-color: rgb(0, 0, 151);
+}
+
+.number-tile.hasActiveRelative {
+  box-shadow: inset #00ff00 0px 0px 11px 0px, #00ff00 0px 0px 8px 4px;
 }
